--- a/Back-End/MiniAPI/MiniAPI/appsettings.json
+++ b/Back-End/MiniAPI/MiniAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=LAPTOP-RABOO;Initial Catalog=TESTDBAPI;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Default": "Data Source=LAPTOP-RABOO;Initial Catalog=CHECKAPI;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
