--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "axios": "^1.7.3",
+    "axios": "^1.3.1",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
