--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -18,8 +18,11 @@
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
