--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.24.1",
     "react-table": "^7.8.0",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
