--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/fontkit": "^2.1.2",
+    "@react-pdf/renderer": "^4.0.0",
     "axios": "^1.3.1",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.6.0",
     "html-react-parser": "^5.1.12",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "path": "^0.12.7",
+    "rasterizehtml": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
