--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -16,6 +16,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf/fontkit": "^2.1.2",
     "@react-pdf/renderer": "^4.0.0",
+    "ag-charts-react": "^10.3.3",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.6.0",
