--- a/Back-End/MiniAPI/MiniAPI/Properties/launchSettings.json
+++ b/Back-End/MiniAPI/MiniAPI/Properties/launchSettings.json
@@ -33,7 +33,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7279;http://localhost:5199",
+      "applicationUrl": "https://localhost:7279;http://192.168.1.33:5199",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
